# rust-id3

./: .cz.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/: dependabot.yml
.github/workflows/: bump.yaml  bump.yml  ci.yml  deploy.yml  main.yml  release.yml  test.yaml
examples/: id3-scan.rs  id3info.rs  list.rs  tagdump.rs
src/: aiff.rs  chunk.rs  error.rs  frame.rs  id3v1.rs  lib.rs  macros.rs  parsers.rs  picture.rs  storage.rs  tag.rs  taglike.rs  tcon.rs  unsynch.rs  util.rs  v1.rs  v1v2.rs  wav.rs
src/frame/: content.rs  content_cmp.rs  contents.rs  encoding.rs  flags.rs  mod.rs  picture.rs  timestamp.rs
src/frame/stream/: mod.rs  v2.rs  v3.rs  v4.rs
src/storage/: mod.rs  plain.rs
src/stream/: encoding.rs  mod.rs  tag.rs  unsynch.rs
src/stream/frame/: content.rs  mod.rs  v2.rs  v3.rs  v4.rs
src/v1/: mod.rs
testdata/: aiff.aiff  geob_serato.id3  github-issue-147.id3  github-issue-156a.id3  github-issue-156b.id3  github-issue-60.id3  github-issue-73.id3  github-issue-86a.id3  github-issue-86b.id3  github-issue-91.id3  id3v1.id3  id3v22.id3  id3v23.id3  id3v23_chap.id3  id3v23_geob.id3  id3v24.id3  id3v24_ext.id3  mpeg-header  picard-2.12.3-id3v23-utf16.id3  picard-2.12.3-id3v24-utf8.id3  quiet.aiff
tests/: track.rs  year.rs
