[package]
name = "id3"
version = "1.1.0"
edition = "2021"
authors = [
    "polyfloyd <floyd@polyfloyd.net>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/polyfloyd/rust-id3"
description = "A library for reading and writing ID3 metadata"
keywords = ["id3", "mp3", "wav", "aiff", "metadata"]
categories = ["encoding", "multimedia", "multimedia::audio", "parser-implementations",]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
bitflags = "1"
byteorder = "1"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
